# peon-ping

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SOUNDS.md  completions.bash  install.sh
.claude/context/: architecture.md  ci.md  sound-packs.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: agent.rs  annoyed.rs  lib.rs  pack.rs  routing.rs  sound.rs  sounds.rs  tab_title.rs  upgrade.rs
crates/core/src/types/: action.rs  config.rs  event.rs  manifest.rs  mod.rs  state.rs
crates/peon/: Cargo.toml
crates/peon/src/: cli.rs  github.rs  hook.rs  main.rs  paths.rs  state_io.rs  upgrade.rs
crates/peon/src/platform/: audio.rs  focus.rs  mod.rs  notification.rs
scripts/: install.sh  uninstall.sh
skills/peon-ping-toggle/: SKILL.md
tests/: install.bats
xtask/: Cargo.toml
xtask/src/: docs.rs  main.rs  prelude.rs
xtask/src/lint/: error.rs  hooks.rs  mod.rs
xtask/src/release/: error.rs  mod.rs
