[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]

[profile.dev]
debug = 0

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
dirs = "6.0"
anstream = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
peon_core = { path = "crates/core" }
