[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
version = "3.0.1"
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]

[profile.dev]
debug = 0

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.10"
dirs = "6.0"
anstream = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
regex = "1"
ureq = { version = "2", features = ["json"] }
peon_core = { path = "crates/core" }
